# rotenote

./: CMakeLists.txt  COPYING  README
src/: CMakeLists.txt
src/client_cli/: CMakeLists.txt  rote.cpp  rote.h
src/client_gtk/: CMakeLists.txt  client_gtk.cpp  client_gtk.glade  client_gtk.h
src/lib/: CMakeLists.txt  note.cpp  note.h  rote_db.cpp  rote_db.h  types.h
