#SET(CMAKE_CXX_FLAGS "-Wall -W -O2 -fPIC")
SET(CMAKE_CXX_FLAGS "-Wall -W -O0 -g")
FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(GTKMM REQUIRED gtkmm-2.4>=2.20.3)
LINK_DIRECTORIES(${GTKMM_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${GTKMM_INCLUDE_DIRS})
FILE(GLOB HEADERS "*.h")
FILE(GLOB SOURCES "*.cpp")
ADD_EXECUTABLE(client_gtk ${SOURCES})
TARGET_LINK_LIBRARIES(client_gtk rote ${GTKMM_LIBRARIES})
SET(GLADE_FILE "client_gtk.glade")
ADD_CUSTOM_COMMAND(
	TARGET client_gtk POST_BUILD
	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/${GLADE_FILE} ${CMAKE_CURRENT_BINARY_DIR})
INSTALL(TARGETS client_gtk DESTINATION bin)
