#SET(CMAKE_CXX_FLAGS "-Wall -W -O2 -fPIC")
SET(CMAKE_CXX_FLAGS "-Wall -W -O0 -g")
FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(GTK2 REQUIRED gtk+-2.0>=2.20.1 gmodule-export-2.0>=2.24.1)
PKG_CHECK_MODULES(APP_INDICATOR appindicator-0.1>=0.3.0)
IF (${APP_INDICATOR_FOUND})
	ADD_DEFINITIONS(-DHAVE_APP_INDICATOR)
ENDIF (${APP_INDICATOR_FOUND})
INCLUDE_DIRECTORIES(${GTK2_INCLUDE_DIRS} ${APP_INDICATOR_INCLUDE_DIRS})
FILE(GLOB HEADERS "*.h")
FILE(GLOB SOURCES "*.cpp")
ADD_EXECUTABLE(client_gtk ${SOURCES})
TARGET_LINK_LIBRARIES(client_gtk rote ${GTK2_LIBRARIES} ${APP_INDICATOR_LIBRARES} ${APP_INDICATOR_LDFLAGS})
SET(GLADE_FILE "client_gtk.glade")
ADD_CUSTOM_COMMAND(
	TARGET client_gtk POST_BUILD
	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/${GLADE_FILE} ${CMAKE_CURRENT_BINARY_DIR})
INSTALL(TARGETS client_gtk DESTINATION bin)
