FIND_PACKAGE(Boost REQUIRED COMPONENTS date_time)
#SET(CMAKE_CXX_FLAGS "-Wall -W -O2 -fPIC")
SET(CMAKE_CXX_FLAGS "-Wall -W -O0 -g")
FILE(GLOB HEADERS "*.h")
FILE(GLOB SOURCES "*.cpp")
ADD_LIBRARY(rote        SHARED ${SOURCES})
ADD_LIBRARY(rote-static STATIC ${SOURCES})
TARGET_LINK_LIBRARIES(rote sqlite3 ${Boost_LIBRARIES})
SET_TARGET_PROPERTIES(rote rote-static PROPERTIES CLEAN_DIRECT_OUTPUT 1 VERSION 0 SOVERSION 0.1 PUBLIC_HEADER "${HEADERS}")
SET_TARGET_PROPERTIES(rote-static PROPERTIES OUTPUT_NAME "rote")
INSTALL(TARGETS rote rote-static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib PUBLIC_HEADER DESTINATION include/rote)
